--- a/index.html
+++ b/index.html
@@ -18,6 +18,14 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
+
+
+
+
+
     <link rel="stylesheet" href="style.css" />
     <title>Work Day Scheduler</title>
   </head>
@@ -30,9 +38,18 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
+      <!--<div id = "hour-9" class = "row time-block">
+        <div class = "col-md-1 hour"></div>
+        <textarea class="col-md-10 description"></textarea>
+        <button class="btn saveBtn col-md-1"></button> -->
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>  
+<script type ="text/javascript" src="script.js"></script>
+  
+  
   </body>
+
 </html>
