--- a/index.html
+++ b/index.html
@@ -21,12 +21,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Nanum+Pen+Script&display=swap" rel="stylesheet">
-
-
-
-
-
     <link rel="stylesheet" href="style.css" />
+
     <title>Work Day Scheduler</title>
   </head>
 
@@ -38,7 +34,7 @@
     </header>
     <div class="container">
       <!-- Timeblocks go here -->
-      <!--<div id = "hour-9" class = "row time-block">
+      <div id = "hour-9" class = "row time-block">
         <div class = "col-md-1 hour"></div>
         <textarea class="col-md-10 description"></textarea>
         <button class="btn saveBtn col-md-1"></button> -->
