--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       <div id = "hour-9" class = "row time-block">
         <div class = "col-md-1 hour"></div>
         <textarea class="col-md-10 description"></textarea>
-        <button class="btn saveBtn col-md-1"></button> -->
+        <button class="btn saveBtn col-md-1"></button> 
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
